<resources>
    <string name="app_name">TalkBox</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_weather_location">Enter a new location.</string>
    <string name="hint_add_new_contact">Filter existing contacts.</string>
    <string name="hint_search_add_members">Search and add members.</string>
    <string name="hint_search_new_contact">Search for new contacts.</string>
    <string name="hint_chat_room_name">Your chat room name.</string>
    <string name="hint_reset_email">Enter email</string>
    <string name="hint_reset_code">Enter code</string>
    <string name="hint_reset_password">New password</string>
    <string name="hint_retype_reset_password">Confirm password</string>
    <string name="hint_enter_account_email">Enter your account email:</string>
    <string name="hint_old_password">Enter your old password</string>
    <string name="hint_set_new_password">Enter your new password</string>
    <string name="hint_confirm_new_password">Confirm your new password</string>
    <string name="hint_search_chat_room">Search for a chat room.</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_settings">Settings</string>
    <string name="action_send_code">Verify</string>
    <string name="action_resend_code">Resend Code</string>
    <string name="action_send_contact_request">Request</string>
    <string name="action_start_chat_room">New Chat Room</string>
    <string name="action_search_weather">Search</string>
    <string name="action_contact_delete">Delete</string>
    <string name="action_create_chat_room">Create</string>
    <string name="action_add_to_room">Add to Room</string>
    <string name="action_info">Info</string>
    <string name="action_leave_room">Leave Room</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change_my_password">Change my Password</string>

    <string name="title_account_info">Account Info</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_contact_info">Contact Info</string>
    <string name="title_messages">Chat Rooms</string>
    <string name="title_location_selection">New Location</string>
    <string name="title_save_location">Add to saved locations</string>
    <string name="title_create_chat_room">Create a Chat Room</string>
    <string name="title_current_participants">Current members</string>
    <string name="title_register">Register for TalkBox</string>
    <string name="title_weather">Weather</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_missed_messages">Missed messages</string>
    <string name="title_contact_requests">Incoming Contact Requests</string>
    <string name="title_outgoing_contact_requests">Outgoing Contact Requests</string>
    <string name="title_24hr_forecast">24-hour forecast</string>
    <string name="title_10day_forecast">7-day forecast</string>
    <string name="title_change_theme">Change Theme</string>
    <string name="title_theme_1">Slate Berry</string>
    <string name="title_theme_2">Midnight Rose</string>
    <string name="title_theme_3">Husky Pride</string>
    <string name="title_theme_4">Terminator</string>
    <string name="title_code_comfirm">
        Enter the code sent to your email and choose a new password!</string>
    <string name="title_password_change">Change Password</string>
    <string name="title_change_password_instructions">
        To change your password, please fill in the following fields:</string>
    <string name="title_zip_search">Search by zip code</string>
    <string name="title_pin_search">No zip code? Drop a pin!</string>
    <string name="message_verification_greeting">Hey! We sent you an email.</string>
    <string name="message_resend_code_instructions">Need a new code?</string>
    <string name="message_verification_instructions">
        Enter the code we sent you to register your account.</string>

    <string name="signIn_switch">STAY SIGNED IN</string>
    <string name="signIn_keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="signIn_keys_prefs_jwt">Shared Prefs JWT</string>
    <string name="signIn_action_sign_out">Sign Out</string>
    <string name="signIn_reset_password">Forgot Password?</string>
    <string name="reset_button">Send Email</string>

    <string-array name="contact_search_array">
        <item>Nickname</item>
        <item>First Name</item>
        <item>Last Name</item>
    </string-array>

    <string-array name="request_search_array">
        <item>Nickname</item>
        <item>First Name</item>
        <item>Last Name</item>
        <item>Email</item>
    </string-array>

    <string name="notification_someone_typing">Someone is typing...</string>
    <string name="admin_nickname">TalkBox Admin</string>
</resources>
