<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.group1project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.group1project.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/navigation_messages"
        android:name="edu.uw.tcss450.group1project.ui.messages.ChatsFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_chat_rooms" >
        <action
            android:id="@+id/action_navigation_chats_to_createChatroomFragment"
            app:destination="@id/navigation_create_chat_room" />
        <action
            android:id="@+id/action_navigation_chats_to_chatroomFragment"
            app:destination="@id/navigation_chat_room" />
    </fragment>

    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.group1project.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.uw.tcss450.group1project.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/navigation_create_chat_room"
        android:name="edu.uw.tcss450.group1project.ui.messages.CreateChatRoomFragment"
        android:label="@string/title_create_chat_room"
        tools:layout="@layout/fragment_create_chatroom" >
        <action
            android:id="@+id/action_navigation_create_chat_room_to_navigation_chat_room"
            app:destination="@id/navigation_chat_room" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat_room"
        android:name="edu.uw.tcss450.group1project.ui.messages.ChatRoomFragment"
        android:label="{chat_room_name}"
        tools:layout="@layout/fragment_chatroom" >
        <argument
            android:name="chat_room_name"
            app:argType="string" />
        <argument
            android:name="chat_room_id"
            app:argType="string" />
    </fragment>


</navigation>