<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.messages.CreateChatRoomFragment">

    <EditText
        android:id="@+id/chat_room_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:hint="@string/hint_chat_room_name"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/create_button">
    </EditText>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/action_create_chat_room"
        android:textColor="?buttonTextColor"
        android:backgroundTint="?android:colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/chat_room_name_text"
        app:layout_constraintRight_toRightOf="parent">
    </Button>

    <EditText
        android:id="@+id/contact_search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/hint_search_add_members"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/contact_search_spinner"
        app:layout_constraintTop_toBottomOf="@id/chat_room_name_text">
    </EditText>

    <Spinner
        android:id="@+id/contact_search_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="?android:textColorPrimary"
        android:popupBackground="@drawable/spinner_dropdown"
        app:layout_constraintTop_toBottomOf="@id/chat_room_name_text"
        app:layout_constraintLeft_toRightOf="@id/contact_search_text"
        app:layout_constraintRight_toRightOf="parent">
    </Spinner>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/contact_search_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context="edu.uw.tcss450.group1project.ui.contacts.ContactsFragment"
        tools:listitem="@layout/fragment_add_contact_card" />

</androidx.constraintlayout.widget.ConstraintLayout>